--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^14.14.8",
     "@types/react": "^16.9.56",
+    "next-pwa": "^5.0.1",
     "typescript": "^4.0.5"
   }
 }
