--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "keisancard2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
-    "@types/classnames": "^2.2.11",
-    "classnames": "^2.2.6",
-    "next": "10.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.8",
-    "@types/react": "^16.9.56",
-    "next-pwa": "^5.0.1",
-    "typescript": "^4.0.5"
-  }
+	"name": "keisancard2",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.32",
+		"@fortawesome/free-regular-svg-icons": "^5.15.1",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
+		"@fortawesome/react-fontawesome": "^0.1.12",
+		"@types/classnames": "^2.2.11",
+		"classnames": "^2.2.6",
+		"next": "10.0.1",
+		"react": "17.0.1",
+		"react-dom": "17.0.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^14.14.8",
+		"@types/react": "^16.9.56",
+		"next-pwa": "^5.0.1",
+		"typescript": "^4.0.5"
+	}
 }
