--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-	"name": "keisancard2",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.7.1",
-		"@fortawesome/free-regular-svg-icons": "^6.7.1",
-		"@fortawesome/free-solid-svg-icons": "^6.7.1",
-		"@fortawesome/react-fontawesome": "^0.2.2",
-		"@types/classnames": "^2.3.4",
-		"classnames": "^2.5.1",
-		"next": "15.0.4",
-		"react": "19.0.0",
-		"react-dom": "19.0.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@types/node": "^22.10.1",
-		"@types/react": "^19.0.0",
-		"typescript": "^5.7.2"
-	}
+  "name": "keisancard2",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "format:fix": "biome check . --fix"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/classnames": "^2.3.4",
+    "classnames": "^2.5.1",
+    "next": "15.0.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@types/node": "^22.10.1",
+    "@types/react": "^19.0.0",
+    "typescript": "^5.7.2"
+  }
 }
